2009-07-22  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-regression-tests: helper script that runs 
	  a series of regression tests against files on the
	  IB server.

2009-07-17  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: fully working PERF_TICKS mode. Calls
	  column is hidden and cost is shown in seconds, rather
	  than in ticks.

2009-07-16  Giulio Eulisse <giulio.eulisse@cern.ch>
	
	* igprof-navigator: fixes a bug spot by Andreas which
	  was stripping "." "s" "q" "l" and "3" separately 
	  from the filename rather than ".sql3".

	* igprof-navigator: new web GUI for igprof-analyse sqlite
	  output. Only requires python and sqlite executable,
	  not py-sqlite.
	  Can work as standalone server or as a CGI script.
	  See documentation at the top of the script for more 
	  information.

2009-07-13  Giulio Eulisse <giulio.eulisse@cern.ch>
	
	* IgProfAnalyse.cc: more resilient option handling and
	  improved usage message.

2009-07-07  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc: tree like report format which shows
	  an ascii art top-down tree for the cumulative cost 
	  of a given counter.

2009-06-31  Giulio Eulisse <giulio.eulisse@cern.ch>
	
	* IgProfAnalyse.cc: new report format which shows the 
	  stacktrace for the top 10 offenders in a given profile.

2009-06-30  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc: rewrote mergeToNode seems to behave 
	  correctly now. 
	  Fixes more issues with the --diff-mode, in particular now
	  it works correcty also in the case some caller / callee is 
	  not there in the baseline.

2009-06-29  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc: diff mode now shows percentage difference
	  between baseline and input.
	  It is also smart enough to recognize that a given function is
	  not there in the baseline and reports it as "new".

2009-06-26  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.h, IgProfAnalyse.cc, IgResolveSymbols.h: fix more 