@@ -1,5 +1,10 @@
 2009-07-22  Giulio Eulisse <giulio.eulisse@cern.ch>
 
+	* IgProfAnalyse.cc, IgProfAnalyse.h: handles the case in which the
+	  same counter is assigned  a different id either in
+	  the same file (i.e. in the case we are performance profiling
+	  a multithreaded program) or in multiple files.
+
 	* igprof-regression-tests: helper script that runs 
 	  a series of regression tests against files on the
 	  IB server.
